# elliptic-curve

./: .gitignore  BITCOINT_HOWTO.md  Cargo.toml  TODO.md
benches/: transaction_parsing.rs
src/: .lib.rs.swp  curve.rs  hashing.rs  io.rs  lib.rs  script.rs  serialise.rs  sign.rs  tx.rs  utils.rs
src/script/: op.rs
testdata/: base58_ex4_1.txt  base58_ex4_2.txt  base58_ex4_3.txt  ex1_2018_pow_5  ex1_5000  ex1_deadbeef12345  ex2_2019_pow_5  ex2_5001  ex2_deadbeef54321
