[package]
name = "elliptic_curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finite_field = { path = "../finite_field", version = "0.1" }
primitive-types = { version = "0.12.1" }
uint = { version = "0.9.5" }
sha2 = { version = "0.10.6" }
rand = { version = "0.8.5" }
hmac = { version = "0.12.1" }
generic-array = "0.14.6"
ripemd = "0.1.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "transaction_parsing"
harness = false
